--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,6 +1,6 @@
 .container{
     height: 100%;
-    width: 190vh;
+    width: 170vh;
     margin: 0 auto;
 }
 
@@ -8,174 +8,61 @@
     display: grid;
 }
 
-.content .card{
-    margin: 10px auto;
-}
-
-.card{
-    height: 40vh;
-    width: 90%;
-    border-radius: 6px;
-    box-shadow: 0px 0px 16px 5px rgba(0,0,0,0.2);
+.card {
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    height: 35vh;
+    width: 100%;
+    margin: 10px;
     display: flex;
+    border-radius: 1rem;
+    border: 1px solid rgba(128, 128, 128, 0.623);
+    overflow-x: scroll;
 }
 
-.card:nth-child(2){
-    box-shadow: none;
-}
-
-.card .count{
-    height: 30vh;
-    width: 55vh;
-    background: rgb(195, 196, 192);
-    margin: 0 auto;
-    margin-top: 20px;
-    border-radius: 10px;
-}
-
-.card .count:nth-child(1){
-    background: rgba(5, 124, 55, 0.3);
-    border-left: 5px solid rgba(5, 124, 55, 0.788);
-}
-.card .count:nth-child(2){
-    background: rgba(216, 114, 19, 0.6);
-    border-left: 5px solid rgb(216, 103, 11)
-}
-.card .count:nth-child(3){
-    background: rgba(216, 186, 19, 0.5);
-    border-left: 5px solid rgba(255, 208, 0, 0.6);
-}
-
-.count .header_title{
-    align-items: center;
-    display: flex;
-}
-
-.count svg{
-    float: right;
-    margin: 10px 30px;
-    font-size: 25px;
-    display: flex;
-    color: rgb(12, 12, 12);
-}
-
-.header_title .content_title{
-    font-size: 20px;
-    font-weight: 400;
-    justify-content: center;
-    margin: 0 auto;
-    color: rgb(90, 133, 233);
-}
-
-.count .content_value{
-    color: rgba(20, 20, 20, 0.8);
-    font-size: 2.3rem;
-    font-weight: 600;
-    margin-top: 30px;
-    margin-left: 1rem;
+.box {
     display: grid;
-}
-
-.content_value p{
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.658);
-}
-
-.content_value .btn{
-    display: flex;
-    margin: 0 auto;
-
-}
-
-.btn .btn_report {
-    margin: 5px;
-    height: 3rem;
-    width: 5rem;
-    letter-spacing: 1px;
-    border: none;
-    border-radius: 5px;
-    font-weight: 600;
-    color: #fff;
-    background: rgb(55, 114, 3);
-}
-
-.btn_report:hover{
-    box-shadow: 0px 0px 16px -8px rgba(0,0,0,0.5);
-}
-
-.dashboard_counter{
-    display: flex;
-    overflow: scroll;
-}
-
- .dashboard_counter .dashboard_count{
     height: 10rem;
     width: 20rem;
-    border-radius: 1rem;
-    margin-top: 1rem;
-    margin: 10px;
-    grid-template-columns: repeat(3, 1fr);
-    box-shadow: 0px 0px 8px 2px rgba(0,0,0,0.2);
+    background: rgba(65, 67, 68, 0.356);
+    margin-top: 15px;
+    border-radius: 5px;
+    box-shadow: 0px 0px 15px -3px rgba(0,0,0,0.1);
 }
 
-.dashboard_count svg { 
-    float: right;
-    margin: 10px 30px;
-    font-size: 30px;
-    display: flex;
-    color: rgb(216, 103, 11);
-}
-
-.dashboard_count .content_value{
-    color: rgba(20, 20, 20, 0.7);
-    font-size: 2.3rem;
-    font-weight: 600;
-    margin-top: 30px;
-    margin-left: 1rem;
-    display: grid;
-}
-
-.dashboard_count .content_title{
-    font-size: 1.5rem;
-    font-weight: 300;
-    justify-content: center;
-    margin-left: 10px;
-}
-
-.details{
-    display: flex;
-    margin: 0 auto;
-    margin-top: 5px;
-    align-items: center;
-    justify-content: center;
-    max-width: 100vh;
-    margin-top: 10px;
-}
-
-.details .service_detail{
+.box .title{
     font-size: 20px;
-    margin: 10px;
-    height: 15px;
-    font-weight: 300;
-    text-transform: capitalize;
+    font-weight: 400;
+    color: black;
 }
 
-.service_content{
-    display: inline-block;
-    border-radius: 6px;
-    background: #ffffff9f;
-    margin: 10px;
-    align-items: center;
-    justify-content: flex-start;
-}
-
-.service_detail .service_content{
-    display: inline-block;
+.title{
     margin-top: 10px;
+    margin-left: 30px;
 }
 
-.service_content span{
-    color: rgb(43, 40, 40);
-    font-weight: 600;
-    margin-left: 30px;
+.box svg{
+    color: green;
+    float: right;
+    margin-right: 30px;
+    font-size: 2rem;
+}
+
+.box .value span{
+    float: left;
+    margin: 10px;
+    font-size: 2rem;
+    float: right;
+}
+
+.out {
+    border: none;
+    box-shadow: 0px 2px 10px -3px rgba(0,0,0,0.3);
+    background: rgba(150, 146, 146, 0.336);
+    height: 5vh;
+    width: 15vh;
+    border-radius:5px;
+    font-size: 2.5vh;
+    margin-top: 10px;
+    color: black;
+    cursor: pointer;
 }
