--- a/src/App.css
+++ b/src/App.css
@@ -73,18 +73,17 @@ main {
 }
 
 .link:hover{
-  box-shadow: 0px 0px 4px 3px rgba(0,0,0,0.1);
-  border-radius: 5px;
+  border-left: 5px solid rgb(235, 145, 9);
+  margin: 2px;
+  border-radius: 1px;
   color: #000;
 }
 
 .active {
-  box-shadow: 0px 0px 10px 4px rgba(18, 17, 17, 0.1);
   color: #171616;
   border-left: 5px solid rgb(235, 145, 9);
   margin-top: 5px;
   font-weight: 200;
-  border-radius: 0.2rem;
   margin: 2px;
 }
 
@@ -95,4 +94,11 @@ main {
 .icon, .link_text {
   font-size: 20px;
   text-transform: capitalize;
+}
+
+@media screen and (max-width: 400px) {
+.sidebar{
+  width: 100%;
+}
+
 }
