--- a/src/Form.module.css
+++ b/src/Form.module.css
@@ -116,6 +116,8 @@ form .button button{
     margin-right: 60px;
     align-items: center;
     justify-content:center;
+    box-shadow: 0px 0px 10px -3px rgba(0,0,0,0.2);
+    border: 1px solid rgb(248, 247, 247);
 }
 
 
@@ -140,11 +142,12 @@ form .button button:hover{
 
 .header_title{
     font-size: 2rem;
-    margin-left: 10px;
+    margin-left: 0;
     font-weight: 500;
     letter-spacing: 1px;
     color: #e77517;
-    box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.1);
+    width: 100%;
+    
 }
 
 form select option {
