--- a/src/Style.module.css
+++ b/src/Style.module.css
@@ -79,3 +79,49 @@ p {
     color: chocolate;
     font-size: 20px;
 }
+
+@media screen and (max-width: 400px) {
+    .form{
+        width: 75%;
+        align-items: center;
+    }
+
+    .button{
+        margin-top: 0.5rem;
+        font-size: 1rem;
+        width: 80%;
+        height: 50px;
+        border: 1px solid rgb(212, 152, 22);
+        background: rgb(212, 152, 22);
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        color: #1f1d1d;
+        cursor: pointer;
+        font-weight: 500;
+        align-items: center;
+        justify-content:center
+    }
+    .box {
+        width: 80%;
+        border: 1px solid rgb(212, 152, 22);
+        border-radius: 1.5vh;
+    }
+
+    .box svg {
+        display: none;
+    }
+
+    input[type=text], input[type=password]{
+        margin-top: 0.5rem;
+        font-size: 1rem;
+        width: 100%;
+        border-radius: 6px;
+        padding: 1rem;
+        border: none;
+        background: none;
+    }
+
+    input[type=text], input[type=password]:focus {
+        outline: none;
+    }
+}
